--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Papyrus';
+    src: url('./papyrus.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-family: "Times New Roman", serif;
 }
@@ -10,7 +17,7 @@ body {
 /* Design of banner after add design method was activated*/
 .add_Design {
     background: linear-gradient(to right, #4a90e2, #d3e3fc);
-    font-family: Papyrus;
+    font-family: 'Papyrus';
     font-size: 60px;
     text-align: justify;
     max-width: none;
